# pybov

./: README.md  REAME.md  mypy.ini  pyproject.toml
.github/workflows/: pull-request.yml
images/pybov-dev-toolbox/: Containerfile
pybov/: Makefile
pybov/src/pybov/marketdata/: header.py
pybov/test/: conftest.py  test_header.py  test_jsonlib.py
pybov/test/fixtures/: .b3-sample-historical-data.txt.swp
src/pybov/: errors.py  helpers.py  jsonlib.py
test/: test_errors_base.py  test_helpers.py  test_pybov.py
